--- a/HomeWork-WebUI/Riode.WebUI/Views/Shop/Index.cshtml
+++ b/HomeWork-WebUI/Riode.WebUI/Views/Shop/Index.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model ShopIndexViewModel
 @{
     ViewData["Title"] = "Index";
 }
@@ -85,29 +85,34 @@
                             <div class="widget widget-collapsible">
                                 <h3 class="widget-title">Size</h3>
                                 <ul class="widget-body filter-items">
-                                    <li><a href="#">Extra Large</a></li>
-                                    <li><a href="#">Large</a></li>
-                                    <li><a href="#">Medium</a></li>
-                                    <li><a href="#">Small</a></li>
+                                    @foreach (var item in Model.productSizes)
+                                    {
+                                        <li><a href="#">@item.Name</a></li>
+
+                                    }
+                                  
                                 </ul>
                             </div>
                             <div class="widget widget-collapsible">
                                 <h3 class="widget-title">Color</h3>
                                 <ul class="widget-body filter-items">
-                                    <li><a href="#">Black</a></li>
-                                    <li><a href="#">Blue</a></li>
-                                    <li><a href="#">Green</a></li>
-                                    <li><a href="#">White</a></li>
+                                    @foreach (var item in Model.productColors)
+                                    {
+                                        <li><a href="#">@item.Name</a></li>
+
+                                    }
+                                 
                                 </ul>
                             </div>
                             <div class="widget widget-collapsible">
                                 <h3 class="widget-title">Brands</h3>
                                 <ul class="widget-body filter-items">
-                                    <li><a href="#">Cinderella</a></li>
-                                    <li><a href="#">Comedy</a></li>
-                                    <li><a href="#">Rightcheck</a></li>
-                                    <li><a href="#">SkillStar</a></li>
-                                    <li><a href="#">SLS</a></li>
+                                    @foreach (var item in Model.brands)
+                                    {
+                                        <li><a href="#">@item.Name</a></li>
+
+                                    }
+                               
                                 </ul>
                             </div>
                         </div>
