--- a/HomeWork-WebUI/Riode.WebUI/Views/_ViewImports.cshtml
+++ b/HomeWork-WebUI/Riode.WebUI/Views/_ViewImports.cshtml
@@ -1,1 +1,6 @@
 ﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+
+@using Riode.WebUI.Model.Entity
+
+
+@using Riode.WebUI.Model.Entity.ViewModels
