--- a/HomeWork-WebUI/Riode.WebUI/Views/Home/Contact.cshtml
+++ b/HomeWork-WebUI/Riode.WebUI/Views/Home/Contact.cshtml
@@ -41,30 +41,38 @@
                     <div class="w-100">
                         <form class="pl-lg-2" id="contact" method="post" novalidate>
                             <h4 class="ls-m font-weight-bold">Let’s Connect</h4>
-                        
+
                             <p>
                                 Your email address will not be published. Required fields are
                                 marked *
                             </p>
                             <div class="row mb-2">
                                 <div class="col-12 mb-4">
-                                    <textarea class="form-control" 
+                                    <textarea class="form-control"
                                               asp-for="Comment"
-                                              placeholder="Comment*"></textarea>
-                                    <span asp-validation-for="Comment" class="text-danger"></span>
+                                              placeholder="Comment*"
+                                              data-rule-required="true"
+                                              data-msg-required="Bosh buraxmayin"></textarea>
+                                    @*<span asp-validation-for="Comment" class="text-danger"></span>data-rule-required="true"*@
                                 </div>
                                 <div class="col-md-6 mb-4">
                                     <input asp-for="Name"
                                            class="form-control"
-                                           placeholder="Name *">
-                                    <span asp-validation-for="Name" class="text-danger"></span>
+                                           placeholder="Name *"
+                                           data-rule-required="true"
+                                           data-msg-required="Bosh buraxmayin">
+                                    @*<span asp-validation-for="Name" class="text-danger"></span>*@
 
                                 </div>
                                 <div class="col-md-6 mb-4">
                                     <input asp-for="Email"
                                            class="form-control"
-                                           placeholder="Email *">
-                                    <span asp-validation-for="Email" class="text-danger"></span>
+                                           placeholder="Email *"
+                                           data-rule-required="true"
+                                           data-msg-required="Bosh buraxmayin"
+                                           data-rule-email="true"
+                                           data-msg-email="Email daxil edin">
+                                    @*<span asp-validation-for="Email" class="text-danger"></span>*@
 
                                 </div>
                             </div>
@@ -154,29 +162,50 @@
 
 @section addjs{
     <script src="~/libs/jquery-validate/jquery.validate.js"></script>
-    <script src="~/libs/jquery-validation-unobtrusive/jquery.validate.unobtrusive.js"></script>
+    @*<script src="~/libs/jquery-validation-unobtrusive/jquery.validate.unobtrusive.js"></script>*@
     <script src="~/libs/toastr.js/toastr.min.js"></script>
 
     <script>
-    toastr.options = {
-        "closeButton": false,
-        "debug": false,
-        "newestOnTop": true,
-        "progressBar": true,
-        "positionClass": "toast-bottom-right",
-        "preventDuplicates": true,
-        "onclick": null,
-        "showDuration": "300",
-        "hideDuration": "1000",
-        "timeOut": "5000",
-        "extendedTimeOut": "1000",
-        "showEasing": "swing",
-        "hideEasing": "linear",
-        "showMethod": "fadeIn",
-        "hideMethod": "fadeOut"
-    }
 
-    $(document).ready(function () {
+        toastr.options = {
+            "closeButton": false,
+            "debug": false,
+            "newestOnTop": true,
+            "progressBar": true,
+            "positionClass": "toast-bottom-right",
+            "preventDuplicates": true,
+            "onclick": null,
+            "showDuration": "300",
+            "hideDuration": "1000",
+            "timeOut": "5000",
+            "extendedTimeOut": "1000",
+            "showEasing": "swing",
+            "hideEasing": "linear",
+            "showMethod": "fadeIn",
+            "hideMethod": "fadeOut"
+        };
+
+        // INPUT ERROR CIXARILMASI VALIDATION WITH
+        $(document).ready(function () {
+
+            $('#contact').validate({
+
+                errorElement: 'span', // Cixan eror label yox span etdih
+               // errorClass: 'is-invalid', // span error cixan zaman class
+              //  validClass: 'is-valid', // span error cixan zaman class input class
+                highlight: function (element, errorClass, validClass) {
+                    $(element).addClass('is-invalid').remove('is-valid')// eger error varsa
+                },
+                unhighlight: function (element, errorClass, validClass) {
+                    $(element).addClass('is-valid').remove('is-invalid') // eger error yoxdusa
+
+                },
+            });
+
+
+        });
+
+        $(document).ready(function () {
 
         $('#contact').submit(function (e) {
             e.preventDefault() // post dayandiriq
@@ -192,7 +221,6 @@
                 contentType: false,
                 processData: false,
                 dataType: 'json',
-
                 beforeSend: function (gelenData) {
                     console.log("before sending");
                 },
@@ -201,8 +229,12 @@
 
                         if (gelenData.error == false) {
                             toastr.success(gelenData.message, 'ugurludur');
-
                             e.currentTarget.reset(); // FORM BOSALDIR
+                            $(e.currentTarget).find('.is-invalid').removeClass('is-invalid');
+                            $(e.currentTarget).find('.is-valid').removeClass('is-valid');
+
+
+
                         } else {
                             toastr.error(gelenData.message, 'xeta');
 
@@ -219,7 +251,7 @@
                 console.log("after sending");
 
             });
-                
+
         });
     });
 
@@ -228,6 +260,22 @@
 }
 
 @section addcss{
+
     <link href="~/libs/toastr.js/toastr.css" rel="stylesheet" />
+
+    <style>
+        .is-invalid {
+            border: 1px solid #dc3545;
+        }
+
+            .is-invalid + span.error {
+                color: red;
+                font-size: 1rem;
+            }
+
+        .is-valid {
+            border: 1px solid teal;
+        }
+    </style>
 }
 
