--- a/HomeWork-WebUI/Riode.WebUI/Views/Home/Faq.cshtml
+++ b/HomeWork-WebUI/Riode.WebUI/Views/Home/Faq.cshtml
@@ -1,4 +1,4 @@
-﻿@model ShopIndexViewModel
+﻿@model  List<Questions>
 
 @{
     ViewData["Title"] = "Faq";
@@ -23,7 +23,7 @@
             <div class="row">
                 <div style="margin-left:17%" class="col-md-8 mt-10 ">
                     <h2 class="title pl-2 pr-2 ls-m text-left">Customer Management</h2>
-                    @foreach (var item in Model.Questions)
+                    @foreach (var item in Model)
                     {
                         <div class="accordion accordion-border accordion-boxed accordion-plus">
                             <div class="card">
@@ -35,12 +35,11 @@
                                 <div id="collapse2-1" class="collapsed">
                                     <div class="card-body">
                                         <p>
-                                            @item.Answers
+                                            @item.Answer
                                         </p>
                                     </div>
                                 </div>
                             </div>
-
                         </div>
                     }
                 </div>
