34 VIDEOS FINIW and Contactpost

--- a/HomeWork-WebUI/Riode.WebUI/Areas/Admin/Views/ContactPosts/Index.cshtml
+++ b/HomeWork-WebUI/Riode.WebUI/Areas/Admin/Views/ContactPosts/Index.cshtml
@@ -136,6 +136,7 @@
             -moz-border-radius: 20px;
             border-radius: 20px;
         }
+
         tr.bold > td > p {
             font-weight: bold !important;
         }
@@ -147,6 +148,7 @@
 }
 
 @section addjs{
+
     <script src="~/libs/Image-letter/JavaScript.js"></script>
 
     <script>
@@ -162,6 +164,7 @@
 
 
         }
+        // activ clas s ucun 
         $(document).ready(function () {
 
             $(`a[href="${window.location.pathname + window.location.search}"]`).closest('li').addClass('active');
