--- a/HomeWork-WebUI/Riode.WebUI/Views/Shop/Details.cshtml
+++ b/HomeWork-WebUI/Riode.WebUI/Views/Shop/Details.cshtml
@@ -80,7 +80,7 @@
                         <div class="product-countdown-container font-weight-semi-bold">
                             <label>Off Ends In:</label>
                             <div class="product-countdown countdown-compact" data-until="2022, 10, 5"
-                                 data-compact="true">00:00:00</div><!-- End of .product-countdown -->
+                                 data-compact="true">00:00:00</div>
                         </div>
                         <div class="ratings-container">
                             <div class="ratings-full">
