--- a/HomeWork-WebUI/Riode.WebUI/Views/Home/Contact.cshtml
+++ b/HomeWork-WebUI/Riode.WebUI/Views/Home/Contact.cshtml
@@ -161,9 +161,9 @@
 </div>
 
 @section addjs{
-    <script src="~/libs/jquery-validate/jquery.validate.js"></script>
+    @*<script src="~/libs/jquery-validate/jquery.validate.js"></script>*@
     @*<script src="~/libs/jquery-validation-unobtrusive/jquery.validate.unobtrusive.js"></script>*@
-    <script src="~/libs/toastr.js/toastr.min.js"></script>
+    @*<script src="~/libs/toastr.js/toastr.min.js"></script>*@
 
     <script>
 
@@ -261,7 +261,7 @@
 
 @section addcss{
 
-    <link href="~/libs/toastr.js/toastr.css" rel="stylesheet" />
+    @*<link href="~/libs/toastr.js/toastr.css" rel="stylesheet" />*@
 
     <style>
         .is-invalid {
