--- a/HomeWork-WebUI/Riode.WebUI/Areas/Admin/Views/ContactPosts/Index.cshtml
+++ b/HomeWork-WebUI/Riode.WebUI/Areas/Admin/Views/ContactPosts/Index.cshtml
@@ -26,9 +26,9 @@
             <div class="col-md-3">
                 <div class="email-sidebar white_box">
                     <ul class="text-left mt-2">
-                        <li><a asp-action="index"><i class="ti-user"></i> <span> <span>Hamsi</span>  <span class="round_badge"> @Model.Count()</span> </span> </a></li>
-                        <li><a asp-route-typeId="1"><i class="ti-crown"></i> <span> <span>Cavab gozleyen</span>  <span class="round_badge">1</span> </span> </a></li>
-                        <li><a asp-route-typeId="2"><i class="ti-announcement"></i> <span> <span>Cavablandi</span>  <span class="round_badge">1</span> </span> </a></li>
+                        <li><a asp-action="index"><i class="ti-user"></i> <span> <span>Hamsi</span>  <span class="round_badge">@ViewBag.query</span> </span> </a></li>
+                        <li><a asp-route-typeId="1"><i class="ti-crown"></i> <span> <span>Cavab gozleyen</span>  <span class="round_badge">@ViewBag.Count</span> </span> </a></li>
+                        <li><a asp-route-typeId="2"><i class="ti-announcement"></i> <span> <span>Cavablandi</span>  <span class="round_badge">@ViewBag.Count1</span> </span> </a></li>
                         <li><a asp-route-typeId="3"><i class="ti-star"></i> <span> <span>Marked</span>   </span> </a></li>
                         <li><a asp-route-typeId="4"><i class="ti-pin"></i> <span> <span>Spam</span> </span> </a></li>
                         <li><a asp-route-typeId="5"><i class="ti-trash"></i> <span> <span>Deleted</span>  </span> </a></li>
