--- a/HomeWork-WebUI/Riode.WebUI/Views/Shop/_ProdactContainer.cshtml
+++ b/HomeWork-WebUI/Riode.WebUI/Views/Shop/_ProdactContainer.cshtml
@@ -6,7 +6,7 @@
 
     <div class="product">
         <figure class="product-media">
-            <a asp-action="details" asp-route-id="1">
+            <a asp-action="details" asp-route-id="@item.Id">
                 <img src="~/uploads/images/product/@imagepath" alt="product" width="280" height="315">
             </a>
             <div class="product-label-group">
