brands vs color vs size admin panel

--- a/HomeWork-WebUI/Riode.WebUI/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/HomeWork-WebUI/Riode.WebUI/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -78,7 +78,7 @@
             </li>
 
             <li class="">
-                
+
                 <a asp-controller="ContactPosts" asp-action="index" aria-expanded="false">
                     <div class="nav_icon_small">
                         <img src="~/uploads/images/menu-icon/Mail_Box.svg" alt="">
@@ -125,12 +125,43 @@
 
 
             <li class="">
-                <a asp-controller="Dashboard" asp-action="Tables" aria-expanded="false">
+                <a asp-controller="Brands" asp-action="index" aria-expanded="false">
                     <div class="nav_icon_small">
                         <img src="~/uploads/images/menu-icon/7.svg" alt="">
                     </div>
                     <div class="nav_title">
-                        <span>Tables</span>
+                        <span>Brands</span>
+                    </div>
+                </a>
+            </li>
+
+            <li class="">
+                <a asp-controller="ProductColors" asp-action="index" aria-expanded="false">
+                    <div class="nav_icon_small">
+                        <img src="~/uploads/images/menu-icon/7.svg" alt="">
+                    </div>
+                    <div class="nav_title">
+                        <span>ProductColors</span>
+                    </div>
+                </a>
+            </li>
+            <li class="">
+                <a asp-controller="ProductSizes" asp-action="index" aria-expanded="false">
+                    <div class="nav_icon_small">
+                        <img src="~/uploads/images/menu-icon/7.svg" alt="">
+                    </div>
+                    <div class="nav_title">
+                        <span>ProductSizes</span>
+                    </div>
+                </a>
+            </li>
+            <li class="">
+                <a asp-controller="OneCategories" asp-action="index" aria-expanded="false">
+                    <div class="nav_icon_small">
+                        <img src="~/uploads/images/menu-icon/7.svg" alt="">
+                    </div>
+                    <div class="nav_title">
+                        <span>Category</span>
                     </div>
                 </a>
             </li>
